--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,27 @@
     "#from astropy.config import get_config_dir\n",
     "#create_config_file('astropy')\n",
     "#get_config_dir()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.224883157243427e+48"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = Planck18.luminosity_distance(4.59).value * 1e5\n",
+    "flx2lum(1e-9,d)"
    ]
   },
   {
