--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,9 +17,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/liangrunduo/miniconda3/lib/python3.11/site-packages/ligo/lw/lsctables.py:89: UserWarning: Wswiglal-redir-stdio:\n",
+      "\n",
+      "SWIGLAL standard output/error redirection is enabled in IPython.\n",
+      "This may lead to performance penalties. To disable locally, use:\n",
+      "\n",
+      "with lal.no_swig_redirect_standard_output_error():\n",
+      "    ...\n",
+      "\n",
+      "To disable globally, use:\n",
+      "\n",
+      "lal.swig_redirect_standard_output_error(False)\n",
+      "\n",
+      "Note however that this will likely lead to error messages from\n",
+      "LAL functions being either misdirected or lost when called from\n",
+      "Jupyter notebooks.\n",
+      "\n",
+      "To suppress this warning, use:\n",
+      "\n",
+      "import warnings\n",
+      "warnings.filterwarnings(\"ignore\", \"Wswiglal-redir-stdio\")\n",
+      "import lal\n",
+      "\n",
+      "  import lal\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " %PGPLOT, Unable to read font file: grfont.dat\n",
+      " %PGPLOT, Use environment variable PGPLOT_FONT to specify the location of the PGPLOT grfont.dat file.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('$HEADAS/lib/python')\n",
