--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "from ligo.skymap.postprocess import crossmatch\n",
     "from astropy.table import Table\n",
     "from ligo.skymap.io.fits import read_sky_map\n",
+    "import re\n",
     "\n",
     "#!source ~/.bashrc heasoft\n",
     "#from xspec import *\n",
@@ -40,6 +41,104 @@
     "#from astropy.config import get_config_dir\n",
     "#create_config_file('astropy')\n",
     "#get_config_dir()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xspec_fitting(sname,mname:str,grp=False,arf=None,rmf=None,rebin=2,instrument:str='WXT',plotmode='data',**fixed_par):\n",
+    "    if instrument == 'WXT':\n",
+    "        el, eh = 0.5, 4\n",
+    "    elif instrument == 'FXT':\n",
+    "        el, eh = 0.5, 10\n",
+    "    else:\n",
+    "        raise KeyError('Input Valid Instrument Type')\n",
+    "    \n",
+    "    print(fixed_par)\n",
+    "    \n",
+    "    if not grp:\n",
+    "        if not arf:\n",
+    "            arf = re.sub(r'\\.(pha|pi)$', '.arf', sname)\n",
+    "        if not rmf:\n",
+    "            rmf = re.sub(r'\\.(pha|pi)$', '.rmf', sname)\n",
+    "        \n",
+    "    #Load Spectrum\n",
+    "    if isinstance(sname,str):\n",
+    "        s = xs.Spectrum(sname,arfFile=arf,respFile=rmf)\n",
+    "    elif isinstance(sname,list):\n",
+    "        for i, sn in enumerate(sname):\n",
+    "            s = xs.Spectrum(sname,arfFile=arf[i],respFile=rmf[i])\n",
+    "            \n",
+    "    xs.AllData.ignore(\"0.0-{:.1f} {:.1f}-**\".format(el,eh))\n",
+    "    xs.AllData.ignore(\"bad\")\n",
+    "            \n",
+    "    #Load Model\n",
+    "    m = xs.Model(mname)\n",
+    "    for key,value in fixed_par.items():\n",
+    "        exec('m.{}={}'.format(key,value))\n",
+    "        exec('m.{}.frozen=True'.format(key))\n",
+    "        \n",
+    "    xs.AllModels.show()\n",
+    "    xs.AllData.show()\n",
+    "    \n",
+    "    \n",
+    "    #Fit\n",
+    "    xs.Fit.nIterations = 300\n",
+    "    xs.Fit.statMethod = \"cstat\"\n",
+    "    xs.Fit.statMethod = \"chi\"\n",
+    "    xs.Fit.perform()\n",
+    "    \n",
+    "    \n",
+    "    #Plot data\n",
+    "    xs.Plot.device = \"/null\"\n",
+    "    xs.Plot.xAxis=\"keV\"\n",
+    "    xs.Plot.setRebin(rebin,20)\n",
+    "    xs.Plot(plotmode)\n",
+    "    \n",
+    "    if isinstance(sname,str):\n",
+    "        energies = xs.Plot.x(1,1)\n",
+    "        edeltas = xs.Plot.xErr(1,1)\n",
+    "        rates = xs.Plot.y(1,1)\n",
+    "        errors = xs.Plot.yErr(1,1)\n",
+    "        labels = xs.Plot.labels()\n",
+    "        model = xs.Plot.model()\n",
+    "        output = (energies,edeltas,rates,errors,model,labels)\n",
+    "    elif isinstance(sname,list):\n",
+    "        output = []\n",
+    "        for i in range(len(sname)):\n",
+    "            energies = xs.Plot.x(i+1,1)\n",
+    "            edeltas = xs.Plot.xErr(i+1,1)\n",
+    "            rates = xs.Plot.y(i+1,1)\n",
+    "            errors = xs.Plot.yErr(i+1,1)\n",
+    "            labels = xs.Plot.labels(i+1)\n",
+    "            model = xs.Plot.model(i+1)\n",
+    "            output.append((energies,edeltas,rates,errors,model,labels))\n",
+    "    \n",
+    "    xs.AllModels.clear()\n",
+    "    xs.AllData.clear()\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "Z = {'TBabs.nH':0.01,'powerlaw.norm':1}\n",
+    "energies,edeltas,rates,errors,model,labels = xspec_fitting('data/fxt_a_06800000181_ff_01_po_src_1_3db_0401.pha','tbabs*cflux*powerlaw',**Z)"
    ]
   },
   {
