--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('$HEADAS/lib/python')\n",
+    "sys.path.append('/Users/liangrunduo/heasoft-6.34/aarch64-apple-darwin23.5.0/lib/python')\n",
     "import EPTools\n",
     "from astropy.coordinates import SkyCoord\n",
     "from EPTools.utils import *\n",
