--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "from astropy.table import Table\n",
     "from ligo.skymap.io.fits import read_sky_map\n",
     "import re\n",
-    "\n",
+    "import pickle\n",
     "#!source ~/.bashrc heasoft\n",
     "#from xspec import *\n",
     "#from astropy.config import create_config_file\n",
@@ -45,28 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Z = {'TBabs.nH':0.01,'powerlaw.norm':1}\n",
-    "energies,edeltas,rates,errors,model,labels = xspec_fitting('data/fxt_a_06800000181_ff_01_po_src_1_3db_0401.pha','tbabs*cflux*powerlaw',**Z)"
+    "plan_root = '/Volumes/T7/Shared_Files/EP/EP-TA-data/S250206dm/'\n",
+    "wxt_obs_name = 'wxt_obs_list.csv'\n",
+    "fxt_obs_name = 'fxt_obs_list.csv'\n",
+    "\n",
+    "wxt_plan = EPTools.make_EPPlan(plan_root+wxt_obs_name,instrument='WXT')\n",
+    "fxt_plan = EPTools.make_EPPlan(plan_root+fxt_obs_name,instrument='FXT')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Get archival lc"
+    "with open(plan_root+'S250206dm_WXT_plan.pkl','wb') as handle:\n",
+    "    pickle.dump(wxt_plan,handle,protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    handle.close()\n",
+    "with open(plan_root+'S250206dm_FXT_plan.pkl','wb') as handle:\n",
+    "    pickle.dump(fxt_plan,handle,protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    handle.close()"
    ]
   },
   {
@@ -292,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
