--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -9,6 +9,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "sys.path.append('/Users/liangrunduo/heasoft-6.34/aarch64-apple-darwin23.5.0/lib/python')\n",
+    "sys.path.append('/Users/liangrunduo/EP/Tools/EPTools') #Air\n",
+    "sys.path.append('/Users/liangrunduo/Desktop/Aujust/NAOC/EP/EPTools') #Pro\n",
+    "from astropy.cosmology import Planck18\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ligo.skymap.io.fits import read_sky_map, write_sky_map\n",
+    "import ligo.skymap.postprocess as postprocess\n",
+    "from astropy.io.fits import writeto\n",
+    "import xspec as xs\n",
+    "import EPTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5817233789438092e+48"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EPTools.flx2lum(1e-9,Planck18.luminosity_distance(0.6).value*1e6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
